--- a/HelloTest/Base.lproj/Main.storyboard
+++ b/HelloTest/Base.lproj/Main.storyboard
@@ -22,7 +22,9 @@
                                 <frame key="frameInset" minY="91" width="28.29%" height="17.36%" maxX="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.081942766766833652" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Erase Hello"/>
+                                <state key="normal" title="Erase Hello">
+                                    <color key="titleColor" red="0.98381649279132755" green="0.94491523994867099" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="eraseHelloActionWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h6Z-ee-eqb"/>
                                 </connections>
